--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -13,6 +13,12 @@
             <div><i class="fa fa-imdb"></i></div><span>Import</span>
         </button>
     </div>
+    <div class="btn-group">
+        <button type="button" class="btn btn-warning" (click)="cleanupDB();"
+            *ngIf="activeView"> <!--  && activeView.tag === 'everything' -->
+            <div><i class="fa fa-recycle"></i></div><span>Cleanup</span>
+        </button>
+    </div>
 </div>
 <div id="MsgBox">
     <div>
